--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="lab.itsoul.com.deliman.starter.ui.SplashActivity">
+    tools:context="lab.itsoul.com.deliman.starter.ui.activities.splash.SplashActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
