--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="lab.itsoul.com.deliman.starter.startup.activities.BaseActivity">
+    android:layout_height="match_parent">
 
     <TextView
         android:layout_width="wrap_content"
